# MoonCrawler

./: .gitignore  CMakeLists.txt  main.cpp
include/: Event.h  GameManager.h  Listener.h  NetworkManager.h
include/NetworkPAL/: NetworkLinuxPAL.cpp  NetworkLinuxPAL.h
resources/layouts/: map.json
src/: Event.cpp  Event.h  GameManager.cpp  Listener.h  NetworkManager.cpp  Subscriber.h  consts.h  main.cpp  meta.h
src/ECS/: Common.h  Components.h  Entity.cpp  Entity.h  System.h
src/Game/: GameMasterIOSystem.cpp  GameMasterIOSystem.h  GameSynchronizerSystem.cpp  GameSynchronizerSystem.h  MainHeroIOSystem.cpp  MainHeroIOSystem.h  Scene.cpp  Scene.h  StaticEntity.cpp  StaticEntity.h
src/Game/Render/: Canvas.cpp  Canvas.h  IDrawable.h  Layer.cpp  Layer.h  StaticSprite.cpp  StaticSprite.h
src/Game/Render/Components/: StaticSprite.cpp  StaticSprite.h
src/Game/Render/Resources/: ResourceManager.h
src/Game/Subsystems/: Collisions.cpp  Collisions.h  Entities.cpp  Entities.h
src/Game/Systems/: EnemySystem.cpp  EnemySystem.h  GameMasterIOSystem.cpp  GameSynchronizerSystem.cpp  GameSynchronizerSystem.h  HealthSystem.cpp  HealthSystem.h  MainHeroIOSystem.cpp  MainHeroIOSystem.h
src/Game/Systems/Subsystems/: Collisions.cpp  Collisions.h  Entities.cpp  Entities.h
src/Managers/: ECSManager.cpp  ECSManager.h  GameManager.cpp  GameManager.h  NetworkManager.cpp  NetworkManager.h
src/NetworkPAL/: INetworkPAL.h  NetworkLinuxPAL.cpp  NetworkLinuxPAL.h
src/Render/: Canvas.cpp  Canvas.h  IDrawable.h  Layer.cpp  Layer.h
src/Render/Components/: StaticSprite.cpp  StaticSprite.h
src/Render/Resources/: ResourceManager.cpp  Texture.h
src/Resources/: Layout.hpp  ResourceManager.cpp  ResourceManager.h  Texture.hpp
src/UI/: Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h  QSFMLCanvas.cpp  QSFMLCanvas.h
src/Utils/: MappedIterator.hpp
src/ui/: GameCanvas.cpp  GameCanvas.h  MainWindow.cpp  MainWindow.h  QSFMLCanvas.cpp
ui/: MainWindow.ui
